class BackupManager:
    def full_backup(self) -> bool:
        return False
