class ReplicationManager:
    pass
