from dbms.query_processing.token import Token


class Lexer:
    def tokenize(self, sql: str) -> list[Token]:
        return []
